# spy-cat-agency

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
postman/: SpyCat.postman_collection.json
src/app/: __init__.py  db.py  deps.py  main.py  models.py  settings.py
src/app/api/: cats.py  missions.py
src/app/clients/: cat_api.py
src/app/schemas/: __init__.py  cats.py  missions.py
src/app/services/: cat_service.py  mission_service.py
