[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spy-cat-agency"
version = "0.1.0"
description = "Spy Cat Agency test assignment backend (FastAPI, async, PostgreSQL)."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.123.0",
    "uvicorn[standard]==0.38.0",
    "SQLAlchemy[asyncio]==2.0.44",
    "asyncpg==0.31.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.7",
    "black>=25.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 140
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 140
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
